--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -3,11 +3,29 @@ name: Build, Test and Publish
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-24.04
 
+    steps:
+    - uses: actions/checkout@v4.2.2
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4.7.1
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: Build with Maven
+      run: mvn -B package
+      
+  dependency-check:
+    runs-on: ubuntu-24.04
+    needs: build
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 21
@@ -16,6 +34,27 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-
-    - name: Build with Maven
-      run: mvn -B package
+        
+    - name: OWASP Dependency Check
+      uses: dependency-check/Dependency-Check_Action@main
+      with:
+        project: 'Decentrifi'
+        path: '.'
+        format: 'HTML'
+        out: 'reports' 
+        args: >
+          --enableRetired
+          --enableExperimental
+        
+    - name: Upload Dependency Check Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: dependency-check-report
+        path: reports/dependency-check-report.html
+        
+    - name: Check for vulnerabilities
+      run: |
+        if grep -q "vulnerabilities" reports/dependency-check-report.html; then
+          echo "Vulnerabilities found. See the dependency check report for details."
+          exit 1
+        fi
